bug on small screens

--- a/client/src/components/ErrorMessage.module.scss
+++ b/client/src/components/ErrorMessage.module.scss
@@ -38,4 +38,8 @@
     .errorMessage, .errorMessageFixed {
         width: 300px;
     }
+
+    .errorMessageFixed {
+        bottom: 30px;
+    }
 }
