--- a/client/src/pages/Login.module.scss
+++ b/client/src/pages/Login.module.scss
@@ -84,7 +84,7 @@
 
     @media (max-width: 768px) {
         .login-container{
-            width: 350px;
+            width: 300px;
             height: 350px;
         }
     }
